# Donem_Projesi

./: .gitignore  CMakeLists.txt  main.c
UI/: ui.c  ui.h
arts/: mushroom.txt
dicenums/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
include/: arthandler.c  arthandler.h  beginning.c  beginning.h  character.c  character.h  combat.c  combat.h  console.c  console.h  dialogues.c  dialogues.h  effects.c  effects.h  eventHandler.c  eventHandler.h  locationtime.c  locationtime.h  menu.c  menu.h  menuevents.c  menuevents.h  narrative.c  narrative.h  rolldice.c  rolldice.h  sidemissions.c  texteverything.c
story/: beginning.c  beginning.h  dialogues.c  dialogues.h  eventhandler.c  eventhandler.h  minimissions.c  minimissions.h  narrative.c  narrative.h  part2.c  part2.h  part3.c  part3.h  part4.c  part4.h  part5.c  part5.h  part6.c  part6.h  part7.c  part7.h  part8.c  part8.h  part9.c  part9.h
